--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 //	변경 사항 바로 적용되서 버서 재시작 해줌
 	implementation 'org.springframework.boot:spring-boot-devtools'
+//	외부 라이브러리 로그 남기기 (기존 부트에서 지원해주는건 버전에 맞게 알아서 끌어와서 버전을 적을 필요가없지만 추가적인 외부 라이브러리는 버전을
+//  명시해줘야된다.	)
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
