부트 공부 5.0 - 회원 리퍼지토리 및 서비스 개발, 테스트

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,19 @@
-spring: #???? ??
-  datasource: #???? 2?
-    url: jdbc:h2:tcp://localhost/~/jpashop #4?
+spring:
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/jpashop
     username: sa
     password:
     driver-class-name: org.h2.Driver
 
-  jpa: #???? 2?
-    hibernate: #???? 4?
-      ddl-auto: create #???? 6?
-    properties: #???? 4?
-      hibernate: #???? 6?
-#        show_sql: true #???? 8?
-        format_sql: true #???? 8?
-logging.level: #???? ??
-  org.hibernate.SQL: debug #???? 2?
-  org.hibernate.type: trace #???? 2?
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        #        show_sql: true
+        format_sql: true
+
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.type: trace
