--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+#      ddl-auto: create
+      ddl-auto: none # none으로 변경하면 db삭제 안되고 계속 쌓임
     properties:
       hibernate:
         #        show_sql: true
