--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ dependencies {
 //  명시해줘야된다.	)
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 
+	// 강제 지연 로딩을 위해서 Hibernate5Module 설치한것
+	// https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-hibernate5
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
