--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
         #        show_sql: true
         format_sql: true
         default_batch_fetch_size: 100
+#        이게 기본 값인데 false로 되어있으면 에러남
+#        open-in-view : true
 
 logging:
   level:
